--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.app filter=lfs diff=lfs merge=lfs -text
 .zip filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
+appv1.0.zip filter=lfs diff=lfs merge=lfs -text
